Use java virtual threads